feat: Se crea el controlador de informacion academica, haciendo la separación en la carpeta helpers y creando los modelos necesarios en la carpeta models, se agregan las rutas creadas en routers y se adjuntas las variables de entorno necesarias para su ejecución
